# docsense

./: .gitignore  README.md  pyproject.toml
.github/workflows/: publish.yml  test.yml
docs/: Makefile  conf.py  index.rst  make.bat
docs/guides/: configuration.rst  examples.rst  getting_started.rst  installation.rst
src/docsense/: __init__.py
src/docsense/cli/: __init__.py  main.py
src/docsense/indexer/: __init__.py  document.py  document_loader.py  vector_store.py
src/docsense/models/: __init__.py  embeddings.py  llm.py
tests/unit/: test_docsense.py
tests/unit/cli/: test_main.py
tests/unit/indexer/: test_document.py  test_document_loader.py  test_vector_store.py
tests/unit/models/: test_embeddings.py  test_llm.py
